--- a/css/homepage.css
+++ b/css/homepage.css
@@ -41,6 +41,14 @@ nav.navbar-primary ul>li>a:hover{
     background-size: cover;
 }
 
+@media screen and (max-width: 767px)
+{
+	.site-head{
+		width: 100%;
+		padding-bottom: 150px;
+	}
+}
+
 header.primary {
     position: absolute;
     top: 0%;
