--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -14,6 +14,10 @@ h1{
 nav.navbar-primary ul{
 	list-style: none;
 	display: inline-flex;
+	display: -webkit-inline-flex;
+	display: -o-inline-flex;
+	display: -ms-inline-flex;
+	display: -moz-inline-flex;
 	font-size: 25px;
 	margin: 0px;
 	padding: 0px;
