Change image to cdn

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -44,7 +44,7 @@ nav.navbar-primary ul>li>a:hover{
 }
 
 .site-head{
-	background: url('../img/background.jpg') no-repeat center center fixed;
+	background: url('http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901485/background_g3pwsr.jpg') no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
