Full optimize cdn

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -150,7 +150,7 @@ article header.big p{
 .coding {
     background-position: 0 0,0 0,0 0;
     background-color: #46A5A9;;
-    background-image: url(https://developer.cdn.mozilla.net/static/img/header-background.png),url(https://developer.cdn.mozilla.net/static/img/blueprint.png),url(https://developer.cdn.mozilla.net/static/img/mdn-header-gradient.png);
+    background-image: url(http://res.cloudinary.com/dt2mntbmf/image/upload/v1442903193/header-background_sp5xef.png),url(http://res.cloudinary.com/dt2mntbmf/image/upload/v1442903225/blueprint_xmmsrg.png),url(http://res.cloudinary.com/dt2mntbmf/image/upload/v1442903260/header-gradient_omkwt8.png);
     background-repeat: repeat,repeat,repeat-x;
     color:white;
 }
