--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -220,3 +220,11 @@ nav.fixed-nav {
 	background-color: #46A5A9 !important;
 	color: white !important;
 }
+.design{
+	background: url('../img/background2.png') no-repeat center center fixed;
+	background-size: cover;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	-ms-background-size: cover;
+}
